--- a/rag-server/package.json
+++ b/rag-server/package.json
@@ -11,8 +11,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^1.1.1",
     "@langchain/core": "^1.1.6",
     "@langchain/google-genai": "^2.1.1",
+    "@langchain/textsplitters": "^1.0.1",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
